--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "docs: build": "vuepress build docs"
   },
   "devDependencies": {
-    "vuepress": "^1.8.2"
+    "vuepress": "^1.8.2",
+    "vuepress-plugin-flowchart": "^1.4.3"
   },
   "dependencies": {
     "markdown-it-task-lists": "^2.1.1"
